--- a/src/components/LogInForm/Header.css
+++ b/src/components/LogInForm/Header.css
@@ -6,7 +6,7 @@
     background-color: #f1dfe6; /* Couleur de fond de l'en-tête */
     border-bottom: 1px solid #ddd; /* Bordure inférieure de l'en-tête */
     padding: 10px 20px; /* Espacement interne */
-    border-radius: 4px;
+    border-radius: 8px;
   }
 
   .form {
@@ -15,4 +15,8 @@
     gap: 10px; /* Espacement entre les éléments */
 }
 
+.error{
+  color:red;
+  font-size:smaller;
+}
   
